# boilers_control

./: .flake8  README.md  constants.py  dash_app.py  house_model.py  pyproject.toml
.github/workflows/: python-app.yml
controller/: always_on.py  controller.py  dynamic_programing.py  model_predictive_controller.py  naiive_controller.py  utils.py
simulation/: house_model.py  simulator.py
tests/: perfomance_test.py  test_dynamic_programing_controller.py  test_model_predictive_controller.py  test_naiive_controller.py
uml/: classes_diagram.puml
