[tool.poetry]
name = "boilers-control"
version = "0.1.0"
description = "Test task for ampX"
authors = ["Anton Tmoore <anton.tmur@gmail.com>"]
license = "-"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
dash = "^2.14.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
